--- a/src/style.scss
+++ b/src/style.scss
@@ -61,3 +61,64 @@
     }
   }
 }
+
+.home {
+  background-color: #7adaa0;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .container {
+    border: 1px solid white;
+    border-radius: 10px;
+    width: 65%;
+    height: 80%;
+    display: flex;
+    overflow: hidden;
+
+    .sidebar {
+      flex: 1;
+      background-color: #cfeddb;
+
+      .navbar {
+        display: flex;
+        align-items: center;
+        background-color: #1cb95b;
+        height: 50px;
+        padding: 10px;
+        justify-content: space-between;
+        color: #ddddf7;
+
+        .logo {
+          font-weight: bold;
+        }
+
+        .user {
+          display: flex;
+          gap: 10px;
+
+          img {
+            background-color: #ddddf7;
+            height: 24px;
+            width: 24px;
+            border-radius: 50%;
+            object-fit: cover;
+          }
+
+          button {
+            background-color: #55c481;
+            color: #ddddf7;
+            font-size: 10px;
+            border: none;
+            cursor: pointer;
+            border-radius: 2px;
+          }
+        }
+      }
+    }
+    .chat {
+      flex: 2;
+    }
+  }
+}
