--- a/src/style.scss
+++ b/src/style.scss
@@ -116,6 +116,39 @@
           }
         }
       }
+      .search {
+        border-bottom: 1px solid gray;
+
+        .searchForm {
+          padding: 10px;
+          input {
+            background-color: transparent;
+            border: none;
+            color: rgb(84, 78, 78);
+            outline: none;
+            ::placeholder {
+              color: lightgray;
+            }
+          }
+        }
+      }
+      .userChat {
+        padding: 10px;
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        color: white;
+        cursor: pointer;
+        &:hover {
+          background-color: #7adaa0;
+        }
+        img {
+          width: 50px;
+          height: 50px;
+          border-radius: 50%;
+          object-fit: cover;
+        }
+      }
     }
     .chat {
       flex: 2;
